--- a/main.html
+++ b/main.html
@@ -3,12 +3,35 @@
 <html>
 
 <head>
+
 	<link rel="stylesheet" href="styles.css">
+
+	
+
 </head>
 
 <body>
+
 	<!-- the entire body must be written by student -->
+
+	<div class="flex">
+
+		<div>A</div>
+
+		<div>B</div>
+
+		<div>C</div>  
+
+		<div>D</div>
+
+		<div>E</div>
+
+		<div>F</div>  
+
+	  </div>	  
+
     <script type="text/javascript" src="./script.js">
+
 </script>
 
 </body>
